[project]
name = "grid-play"
version = "0.1.0"
description = "A web-based playground for building, configuring, and playing Grid Universe games"
authors = [{ name = "Muhammad Rizki Maulana", email = "rizki@rizkiarm.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

dependencies = [
    "grid-universe @ git+https://github.com/grid-universe/grid-universe.git",
    "streamlit>=1.45.0",
    "pyrsistent>=0.20.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "ruff", "types-Pillow"]
doc = ["mkdocs-material"]

[tool.setuptools.packages.find]
where = ["."]
include = ["grid_play*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=grid_play --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["grid_play"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
files = "grid_play"
strict = true
pretty = true

[project.scripts]
grid-play = "grid_play.cli:main"